<resources>
    <string name="app_name">XBasketball</string>

    <string name="open">打开</string>
    <string name="close">关闭</string>

    <string name="cancel">取消</string>
    <string name="confirm">确定</string>

    <string name="quarter_time_end">00:00</string>
    <string name="quarter_fourth">第4节</string>
    <string name="game_end">已结束</string>

    <string name="quarter_not_start">第0节</string>
    <string name="game_not_start">未开始</string>

    <string name="action_share">分享链接</string>
    <string name="pic_share_title">#XBasketball 分享一张篮球美图</string>
    <string name="action_save">保存到本地</string>

    <string name="drawer_main">首页</string>
    <string name="drawer_pic">图片</string>
    <string name="drawer_video">视频</string>
    <string name="drawer_setting">设置</string>
    <string name="drawer_about">关于</string>

    <string name="about_text">Project：XBasketball\n\nAuthor: Xu\n\nGithub address: https://github.com/XuDeveloper/XBasketball\n\nPersonal Blog: https://dev-xu.cn
    </string>

    <string name="notice">提示</string>
    <string name="notice_get_sdcard_permission">XBasketball需要向您获取\"写入SD卡\"权限，这样才能正常保存图片。</string>
    <string name="notice_get_permission_fail">获取权限失败，请重试！</string>


</resources>
